--- a/bms/templates/bms/client_ui/weui-tab.html
+++ b/bms/templates/bms/client_ui/weui-tab.html
@@ -5,9 +5,9 @@
       <h1>页面一</h1>
     </div>
       <div id="subtab2" class="weui-tab__bd-item weui-tab__bd-item--active">
-       {% include 'bms/client_ui/exchange.html' %}
+       {% include 'bms/client_ui/exchange/exchange.html' %}
       </div>
     <div id="subtab3" class="weui-tab__bd-item ">
-      {% include 'bms/client_ui/me.html' %}
+      {% include 'bms/client_ui/account/me.html' %}
     </div>
 {% endblock main-content %}
