--- a/bms/templates/bms/user_config/user_group_config.html
+++ b/bms/templates/bms/user_config/user_group_config.html
@@ -148,7 +148,7 @@
             {#headers: headers,#}
             data: postdata,
             success: function (data) {
-                if (data && data.success=='true') {
+                if (data && data.success) {
                     $.messager.show({
                         title: '我的消息',
                         msg: '添加用户组成功。',
@@ -202,7 +202,7 @@
                     {#headers: headers,#}
                     data: postdata,
                     success: function (data) {
-                        if (data && data.success=='true') {
+                        if (data && data.success) {
                             $.messager.show({
                                 title: '我的消息',
                                 msg: '删除用户角色成功。',
