--- a/bms/templates/bms/includes/header.html
+++ b/bms/templates/bms/includes/header.html
@@ -9,6 +9,7 @@
 {#            <li>{{ perms }}</li>#}
 
             <li><a href="/bms/index"><b>首页</b></a></li>
+            <li><a href="/bms/change_pwd_page"><b>修改密码</b></a></li>
             <li><a href="/bms/logout"><b>注销</b></a></li>
         </ul>
     </div>
