--- a/bms/templates/bms/client_ui/account/checking.html
+++ b/bms/templates/bms/client_ui/account/checking.html
@@ -48,7 +48,7 @@
             <i class="weui-icon-waiting weui-icon_msg"></i>
             <div class="icon-box__ctn">
                 <h3 class="icon-box__title">等待审核中...</h3>
-                <p class="icon-box__desc">您的实名认证信息正在等待审核，请耐心等待。</p>
+                <p class="icon-box__desc">您提交的信息正在等待审核，请耐心等待。</p>
             </div>
         </div>
 
