--- a/bms/templates/bms/client_ui/account/my_account.html
+++ b/bms/templates/bms/client_ui/account/my_account.html
@@ -23,7 +23,7 @@
                 </div>
 
                 <div class='demos-content-padded'>
-                    <a href="javascript:;" class="weui-btn weui-btn_primary" id="upload_info">修改资料</a>
+{#                    <a href="javascript:;" class="weui-btn weui-btn_primary" id="upload_info">修改资料</a>#}
                     <a href="javascript:window.history.back();" class="weui-btn weui-btn_plain-default">返回</a>
                 </div>
             </form>
