--- a/bms/templates/bms/client_ui/account/recharge.html
+++ b/bms/templates/bms/client_ui/account/recharge.html
@@ -8,6 +8,6 @@
 
     <div class='demos-content-padded'>
         {#<a href="javascript:;" class="weui-btn weui-btn_primary" id="upload_info">修改资料</a>#}
-        <a href="javascript:window.history.back();" class="weui-btn weui-btn_plain-default">返回</a>
+        <a href="../redirect_pre_page/index#subtab3" class="weui-btn weui-btn_plain-default">返回</a>
     </div>
 {% endblock main-content %}
