--- a/bms/templates/bms/base.html
+++ b/bms/templates/bms/base.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>金艮云平台管理后台</title>
     <link rel="stylesheet" href="{% static 'InsdepUI/master.css' %}">
     <link rel="stylesheet" href="{% static 'InsdepUI/insdep.easyui.min.css' %}">
     <link rel="stylesheet" href="{% static 'InsdepUI/icon.css' %}">
@@ -65,8 +65,8 @@
         }
     }
 
-    </script>
-    {% block javascript %}
-    {% endblock javascript %}
+</script>
+{% block javascript %}
+{% endblock javascript %}
 
 </html>
