--- a/bms/templates/bms/client_ui/account/my_account.html
+++ b/bms/templates/bms/client_ui/account/my_account.html
@@ -1,32 +1,45 @@
 {% extends 'bms/client_ui/base_no_tab.html' %}
+{% load humanize %}
 {% block main-content %}
     <header class='demos-header'>
-      <h1 class="demos-title">账户设置</h1>
+      <h1 class="demos-title">账户记录</h1>
     </header>
     <div class="weui-cells weui-cells_form">
-        <div class="userInfo">
-            <form id="authentication_form">
-                {% csrf_token %}
-                <!--手机号-->
-                <div class="weui-cell">
-                    <div class="weui-cell__hd"><label for="" class="weui-label  validate-required">手机号</label></div>
-                    <div class="weui-cell__bd">
-                        <input type="text" class="weui-input" id="card_no" name="card_no" placeholder="请输入银行卡号">
-                    </div>
+        <div class="weui-form-preview">
+            <div class="weui-form-preview__hd">
+                <div class="weui-form-preview__item">
+                    <label class="weui-form-preview__label">交易金额</label>
+                    <em class="weui-form-preview__value">¥2400.00</em>
                 </div>
-                <!--姓名-->
-                <div class="weui-cell">
-                    <div class="weui-cell__hd"><label for="" class="weui-label  validate-required">姓名</label></div>
-                    <div class="weui-cell__bd">
-                        <input type="text" class="weui-input" id="id_no" name="id_no" placeholder="请输入身份证号">
-                    </div>
+            </div>
+            <div class="weui-form-preview__bd">
+                <div class="weui-form-preview__item">
+                    <label class="weui-form-preview__label">资金渠道</label>
+                    <span class="weui-form-preview__value">电动打蛋机</span>
                 </div>
-
-                <div class='demos-content-padded'>
-{#                    <a href="javascript:;" class="weui-btn weui-btn_primary" id="upload_info">修改资料</a>#}
-                    <a href="javascript:window.history.back();" class="weui-btn weui-btn_plain-default">返回</a>
+                <div class="weui-form-preview__item">
+                    <label class="weui-form-preview__label">资金类型</label>
+                    <span class="weui-form-preview__value">名字名字名字</span>
                 </div>
-            </form>
+                <div class="weui-form-preview__item">
+                    <label class="weui-form-preview__label">流水号</label>
+                    <span class="weui-form-preview__value">长很长的名字很长很长的名字</span>
+                </div>
+                <div class="weui-form-preview__item">
+                    <label class="weui-form-preview__label">交易前余额</label>
+                    <span class="weui-form-preview__value">¥2400.00</span>
+                </div>
+                <div class="weui-form-preview__item">
+                    <label class="weui-form-preview__label">交易后余额</label>
+                    <span class="weui-form-preview__value">¥2400.00</span>
+                </div>
+            </div>
+{#            <div class="weui-form-preview__ft">#}
+{#                <a class="weui-form-preview__btn weui-form-preview__btn_primary" href="javascript:">操作</a>#}
+{#            </div>#}
+        </div>
+        <div class='demos-content-padded'>
+            <a href="../redirect_pre_page/index#subtab3" class="weui-btn weui-btn_plain-default">返回</a>
         </div>
     </div>
 {% endblock main-content %}
